--- a/code/index.ipynb
+++ b/code/index.ipynb
@@ -54,24 +54,6 @@
     "        print(f\"\\nMovimento inválido: {movimento.uci()}\")\n",
     "        return False\n",
     "\n",
-    "\n",
-    "def ler_movimentos_do_dataset(file_path):\n",
-    "    movimentos = []\n",
-    "\n",
-    "    with open(file_path, 'r') as dataset_file_path:\n",
-    "        # loop infinito ate ler totalmente o arquivo\n",
-    "        while True:\n",
-    "            # Lê um jogo no arquivo\n",
-    "            jogo = chess.pgn.read_game(dataset_file_path)\n",
-    "            if jogo is None:\n",
-    "                break\n",
-    "\n",
-    "            for movimento in jogo.mainline_moves():\n",
-    "                # add cada movimento na lista\n",
-    "                movimentos.append(movimento)\n",
-    "\n",
-    "    return movimentos\n",
-    "\n",
     "#função que usa o stockfish para fazer a jogada\n",
     "def stockfish(tabuleiro, engine):\n",
     "    # configurar do nível de dificuldade\n",
@@ -82,6 +64,9 @@
     "    \n",
     "    #habilitar o NNUE\n",
     "    engine.configure({\"Use NNUE\": True})\n",
+    "    \n",
+    "    #configurar ram usada\n",
+    "    engine.configure({\"Hash\": 5120})\n",
     "    \n",
     "    # Clone do tabuleiro\n",
     "    tabuleiro_clone = tabuleiro.copy()\n",
@@ -97,9 +82,17 @@
     "\n",
     "    print_chess_board(tabuleiro)\n",
     "\n",
-    "\n",
+    "#função de escolha de cor\n",
+    "def escolher_cor():\n",
+    "    cor = input(\"Escolha a cor (B para brancas, P para pretas): \").upper()\n",
+    "    while cor not in ['B', 'P']:\n",
+    "        print(\"Escolha inválida. Tente novamente.\")\n",
+    "        cor = input(\"Escolha a cor (B para brancas, P para pretas): \").upper()\n",
+    "    return cor\n",
     "\n",
     "def jogar():\n",
+    "    cor_jogador = escolher_cor()\n",
+    "    \n",
     "    tabuleiro = chess.Board()\n",
     "    print(\"Tabuleiro inicial:\")\n",
     "    print_chess_board(tabuleiro)\n",
@@ -108,18 +101,17 @@
     "\n",
     "\n",
     "    while not tabuleiro.is_game_over():\n",
-    "        if tabuleiro.turn == chess.WHITE:\n",
-    "            # Vez das brancas\n",
-    "            user_input = input(\n",
-    "                \"Jogada (em formato UCI, ex: 'e2e4'): \")\n",
+    "        if (cor_jogador == 'B' and tabuleiro.turn == chess.WHITE) or (cor_jogador == 'P' and tabuleiro.turn == chess.BLACK):\n",
+    "            # Vez das brancas ou pretas, dependendo da escolha do jogador\n",
+    "            user_input = input(\"Jogada (em formato UCI, ex: 'e2e4'): \")\n",
     "            user_move = chess.Move.from_uci(user_input)\n",
     "\n",
     "            if realizar_jogada(tabuleiro, user_move):\n",
-    "                print(\"A jogada das brancas foi: \" + user_input)\n",
+    "                    print(f\"A jogada das {cor_jogador} foi: {user_input}\")\n",
     "            else:\n",
-    "                print(\"Movimento inválido. Tente novamente.\")\n",
+    "                    print(\"Movimento inválido. Tente novamente.\")\n",
     "        else:\n",
-    "            # Vez das pretas: escolher um movimento inteligente\n",
+    "            # Vez das pretas ou brancas, dependendo da escolha do jogador\n",
     "            stockfish(tabuleiro, engine)\n",
     "\n",
     "    print(\"O jogo acabou.\")\n",
