--- a/code/index.ipynb
+++ b/code/index.ipynb
@@ -56,29 +56,34 @@
     "\n",
     "#função que usa o stockfish para fazer a jogada\n",
     "def stockfish(tabuleiro, engine):\n",
-    "    # configurar do nível de dificuldade\n",
+    "    # Configurar do nível de dificuldade\n",
     "    engine.configure({\"Skill Level\": 0})\n",
     "    \n",
-    "    #configurar tempo minimo de pensamento\n",
+    "    # Configurar tempo mínimo de pensamento\n",
     "    engine.configure({\"Move Overhead\": 0.5})\n",
     "    \n",
-    "    #habilitar o NNUE\n",
+    "    # Habilitar o NNUE\n",
     "    engine.configure({\"Use NNUE\": True})\n",
     "    \n",
-    "    #configurar ram usada\n",
+    "    # Configurar RAM usada\n",
     "    engine.configure({\"Hash\": 5120})\n",
     "    \n",
     "    # Clone do tabuleiro\n",
     "    tabuleiro_clone = tabuleiro.copy()\n",
     "\n",
-    "    # avaliando da melhor jogada\n",
+    "    # Avaliar a melhor jogada\n",
     "    resultado = engine.play(tabuleiro_clone, chess.engine.Limit(time=2.0))\n",
     "    movimento_escolhido = resultado.move\n",
     "\n",
     "    print(f\"Stockfish escolheu o movimento: {movimento_escolhido.uci()}\")\n",
     "\n",
     "    if resultado.move in tabuleiro_clone.legal_moves:\n",
-    "        tabuleiro.push(movimento_escolhido)\n",
+    "        # Verificar se a jogada envolve uma promoção de peão\n",
+    "        if tabuleiro_clone.piece_at(movimento_escolhido.to_square) == chess.PAWN and chess.rank(movimento_escolhido.to_square) in [chess.RANK_1, chess.RANK_8]:\n",
+    "            #promover automaticamente para a rainha\n",
+    "            tabuleiro.push(chess.Move(movimento_escolhido.from_square, movimento_escolhido.to_square, promotion=chess.QUEEN))\n",
+    "        else:\n",
+    "            tabuleiro.push(movimento_escolhido)\n",
     "\n",
     "    print_chess_board(tabuleiro)\n",
     "\n",
